Made it easier to switch games

--- a/pokemonred/index.html
+++ b/pokemonred/index.html
@@ -8,12 +8,12 @@
         </div>
         <script>
             EJS_player = "#game";
-            EJS_core = "core";
-            EJS_gameName = "gameName";
+            EJS_core = "gb";
+            EJS_gameName = "Pokemon - Red";
             EJS_color = "#ff0000";
             EJS_startOnLoaded = false;
             EJS_pathtodata = "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
-            EJS_gameUrl = "gameUrl";
+            EJS_gameUrl = "Pokemon Red.gb";
         </script>
         <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
     </body>
